修复启动器无法启动问题